--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-datetime-picker": "^3.0.1",
     "react-dom": "^16.13.0",
     "react-icons": "^3.9.0",
     "react-redux": "^7.2.0",
